--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.0.2",
   "description": "[three.js](https://github.com/mrdoob/three.js/) snippets for Atom editor",
   "engines": {
-    "atom": "*",
-    "node": "*"
+    "atom": ">=1.0.0 <2.0.0"
   },
   "homepage": "https://github.com/devert/atom-threejs-snippets",
   "repository": {
@@ -16,6 +15,5 @@
   "bugs": {
     "url": "https://github.com/devert/atom-threejs-snippets/issues"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {}
 }
