--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gulp-bump": "^1.0.0",
     "gulp-conventional-changelog": "^0.7.0",
     "gulp-load-plugins": "^1.0.0",
-    "gulp-task-listing": "^1.0.1"
+    "gulp-task-listing": "^1.0.1",
+    "gulp-util": "^3.0.6",
+    "yargs": "^3.27.0"
   }
 }
