--- a/.editorconfig
+++ b/.editorconfig
@@ -4,8 +4,7 @@
 root = true
 
 [*]
-end_of_line = lf
-indent_style = spaces
+indent_style = space
 indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
