--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Dennis Evert",
-  "name": "atom-threejs-snippets",
+  "name": "threejs-snippets",
   "version": "0.0.3",
   "description": "three.js snippets for Atom editor",
   "keywords": [
@@ -21,8 +21,12 @@
   "bugs": {
     "url": "https://github.com/devert/atom-threejs-snippets/issues"
   },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
+  },
   "dependencies": {},
   "devDependencies": {
+    "cz-conventional-changelog": "^1.1.4",
     "gulp": "^3.9.0",
     "gulp-bump": "^1.0.0",
     "gulp-conventional-changelog": "^0.7.0",
